fix: 🐛 checkbox bottomSpacing prop spacings

--- a/src/themes/light.css
+++ b/src/themes/light.css
@@ -691,6 +691,12 @@
   --sl-form-min-heigth-large: 5.938rem;
   /* 95px */
 
+  --sl-form-checkbox-min-heigth-small: 40px;
+  
+  --sl-form-checkbox-min-heigth-medium: 40px;
+  
+  --sl-form-checkbox-min-heigth-large: 40px;
+
   /* 
   * Toggles (checkboxes, radios, switches)
  */
